fix: use liquibase proper dependency, adjust jpa entities
-use getFirst method instead of get(0) from collections